feat(go-rewrite): implemented clear cache endpoint (#182)
